@@ -1,0 +1,7 @@
+// SPDX-License-Identifier: GPL-3.0-or-later
+#include "image_impex.h"
+
+void DP_image_impex_init(void)
+{
+    // Nothing to do, only relevant for image_qt.cpp.
+}
